--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=KinoBack
+spring.profiles.active=test
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
