#15 ændret store og små bukstaver

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,5 +3,5 @@ spring.datasource.url=${PROD_DATABASE_URL}
 spring.datasource.username=${PROD_USERNAME}
 spring.datasource.password=${PROD_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
