#29 tilføjet en se alle film endpoint til backenden

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,3 +11,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=sa
 spring.datasource.password=
 logging.level.org.springframework.web=DEBUG
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
