--- a/.github/workflows/main_kinobackapp.yml
+++ b/.github/workflows/main_kinobackapp.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Upload JAR as Artifact
       uses: actions/upload-artifact@v4
       with:
-          name: spring-boot-app
+          name: java-app
           path: target/*.jar
 
   deploy:
