--- a/.github/workflows/main_kinobackapp.yml
+++ b/.github/workflows/main_kinobackapp.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: spring-boot-app  
+          name: java-app  
           path: target  
           
       - name: Deploy to Azure Web App
