--- a/.github/workflows/main_kinobackapp.yml
+++ b/.github/workflows/main_kinobackapp.yml
@@ -53,3 +53,4 @@ jobs:
           app-name: 'KinoBackAPP'
           slot-name: 'Production'
           package: 'target/*.jar' 
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
